import colecciones.ListaNexoDoble;

public class SistemaImpl implements Sistema {
    public ListaNexoDoble pokemones;

}
